<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/bg_header_card"
        android:elevation="8dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="132dp"
            android:contentDescription="@string/desc_logo_ntu"
            android:src="@drawable/logo_ntu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@drawable/bg_card_rounded"
            android:elevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_subtitle"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginBottom="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCN2"
                style="@style/MyModernButton"
                android:text="@string/btn_cn2"
                app:backgroundTint="@color/button_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCN3"
                style="@style/MyModernButton"
                android:text="@string/btn_cn3"
                app:backgroundTint="@color/button_tertiary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCN4"
                style="@style/MyModernButton"
                android:text="@string/btn_cn4"
                app:backgroundTint="@color/button_tertiary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAbout"
                style="@style/MyModernButton"
                android:text="@string/btn_about"
                app:backgroundTint="@color/button_accent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnThem"
                style="@style/MyModernButton"
                android:text="@string/btn_bonus"
                app:backgroundTint="@color/button_success"
                android:layout_marginBottom="0dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>